shadow pass makes differences when using material node #38831

Closed
opened 2014-02-25 13:17:03 +01:00 by Kesk Y · 12 comments

System Information
windows 7 64bit
radeon 5850hd

Blender Version
2.70 test builds hash 4789793,date 2014-02-20 05:32)

Short description of error
if shadow pass == True then cube's shadow is vanished.
if shadow pass == False then cube's shadow is not vanished.
test.jpg
please look this picture and compare enclosed by red circles.
Exact steps for others to reproduce the error
test.blend
open this file and render with enabled shadow pass case and disabled.

**System Information** windows 7 64bit radeon 5850hd **Blender Version** 2.70 test builds hash 4789793,date 2014-02-20 05:32) **Short description of error** if shadow pass == True then cube's shadow is vanished. if shadow pass == False then cube's shadow is not vanished. ![test.jpg](https://archive.blender.org/developer/F78906/test.jpg) please look this picture and compare enclosed by red circles. **Exact steps for others to reproduce the error** [test.blend](https://archive.blender.org/developer/F78905/test.blend) open this file and render with enabled shadow pass case and disabled.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @icyp

Added subscriber: @icyp
Brecht Van Lommel was assigned by Lukas Tönne 2014-02-25 18:29:22 +01:00
Member

Added subscribers: @brecht, @LukasTonne

Added subscribers: @brecht, @LukasTonne
Member

You are using the Diffuse output of the material node here, which usually has the shadows "baked in", but if you enable a separate shadow pass they are not included in the Diffuse pass (Color pass still has them). I'm not entirely sure if this is intentional or a limitation of the Blender Internal renderer though.

@brecht: Could you confirm if this is actually a bug?

You are using the `Diffuse` output of the material node here, which usually has the shadows "baked in", but if you enable a separate shadow pass they are not included in the Diffuse pass (Color pass still has them). I'm not entirely sure if this is intentional or a limitation of the Blender Internal renderer though. @brecht: Could you confirm if this is actually a bug?

That's not intentional, enabling other render passes should never influence the Combined pass. So it's a bug yes.

That's not intentional, enabling other render passes should never influence the Combined pass. So it's a bug yes.
Member

Added subscriber: @IRIEShinsuke

Added subscriber: @IRIEShinsuke
Member

@brecht: Confused ... do you mean the Diffuse pass? Because that's the pass containing shadows only if no shadow pass exists. The combined Color always has shadows afaict.

@brecht: Confused ... do you mean the Diffuse pass? Because that's the pass containing shadows **only** if no shadow pass exists. The combined Color always has shadows afaict.

I meant the Combined pass as you see in the image editor after rendering, that shouldn't be influenced by toggling the shadow pass on/off. As a consequence of that the Diffuse output in the material node should also be the same and always include the shadow, which it is not doing now.

I meant the Combined pass as you see in the image editor after rendering, that shouldn't be influenced by toggling the shadow pass on/off. As a consequence of that the Diffuse output in the material node should also be the same and always include the shadow, which it is not doing now.

This issue was referenced by blender/blender-addons-contrib@1dbd3ae629

This issue was referenced by blender/blender-addons-contrib@1dbd3ae6291349f044c6eaa9b87b8e686f476865

This issue was referenced by 1dbd3ae629

This issue was referenced by 1dbd3ae6291349f044c6eaa9b87b8e686f476865

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 1dbd3ae629.

Closed by commit 1dbd3ae629.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38831
No description provided.