Fix T38831: blender internal enabling shadow pass changes material node diffuse.

It would include/exclude shadow depending on the pass being disabled/enabled,
but that should have no influence on the combined render result. Now it always
includes shadow.