source/blender/render/extern/include/RE_shader_ext.h
@@ -50,9 +50,10 @@ typedef struct ShadeResult {
 	float col[4];
 	float alpha, mist, z;
 	float emit[3];
-	float diff[3];		/* no ramps, shadow, etc */
-	float spec[3];
-	float shad[4];		/* shad[3] is shadow intensity */
+	float diff[3];			/* diffuse with no ramps, shadow, etc */
+	float diffshad[3];		/* diffuse with shadow */
+	float spec[3];			/* specular with shadow */
+	float shad[4];			/* shad[3] is shadow intensity */
 	float ao[3];
 	float env[3];
 	float indirect[3];
